Final Final Code

--- a/Data Engineering/Notebooks/Raw.ipynb
+++ b/Data Engineering/Notebooks/Raw.ipynb
@@ -9,11 +9,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exported employees to RAW/employees.csv\n",
-      "Exported skills to RAW/skills.csv\n",
-      "Exported certifications to RAW/certifications.csv\n",
-      "Exported employeecertifications to RAW/employeecertifications.csv\n",
-      "Exported employeeskills to RAW/employeeskills.csv\n"
+      "Exported employees to raw/employees.csv\n",
+      "Exported skills to raw/skills.csv\n",
+      "Exported certifications to raw/certifications.csv\n",
+      "Exported employeecertifications to raw/employeecertifications.csv\n",
+      "Exported employeeskills to raw/employeeskills.csv\n"
      ]
     }
    ],
@@ -22,18 +22,18 @@
     "from pymongo import MongoClient\n",
     "import os\n",
     "\n",
-    "client = MongoClient('mongodb+srv://shubham:shubham@cluster0.tabdc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0')  # Adjust the connection string if needed\n",
+    "client = MongoClient('mongodb+srv://shubham:shubham@cluster0.tabdc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0')  \n",
     "db = client['test']\n",
     "collections_to_export = ['employees', 'skills', 'certifications', 'employeecertifications', 'employeeskills']\n",
-    "os.makedirs('RAW', exist_ok=True)\n",
+    "os.makedirs('raw', exist_ok=True)\n",
     "\n",
     "for collection_name in collections_to_export:\n",
     "    collection = db[collection_name]\n",
     "    df = pd.DataFrame(list(collection.find()))\n",
     "    if '_id' in df.columns:\n",
     "        df.drop('_id', axis=1, inplace=True)\n",
-    "    df.to_csv(f\"RAW/{collection_name}.csv\", index=False)\n",
-    "    print(f\"Exported {collection_name} to RAW/{collection_name}.csv\")\n"
+    "    df.to_csv(f\"raw/{collection_name}.csv\", index=False)\n",
+    "    print(f\"Exported {collection_name} to raw/{collection_name}.csv\")\n"
    ]
   },
   {
